Working scoreboard prototype

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+[env:nodemcuv2-ota]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
@@ -17,3 +17,12 @@ upload_protocol = espota
 upload_speed = 115200
 monitor_speed = 115200
 upload_port = 10.0.0.116
+
+[env:Nodemcu-hardwire]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+upload_speed = 115200
+monitor_speed = 115200
+lib_deps = 
+	
